add list bookings per week
